--- a/resources/WEB-INF/web.xml
+++ b/resources/WEB-INF/web.xml
@@ -68,6 +68,12 @@
 
     </servlet>
 
+    <servlet>
+      <servlet-name>View</servlet-name>
+      <servlet-class>thredds.servlet.ViewServlet</servlet-class>
+       <load-on-startup>1</load-on-startup>
+    </servlet>
+
 
 
     <servlet-mapping>
@@ -96,6 +102,11 @@
         <url-pattern>/docs/*</url-pattern>
     </servlet-mapping>
 
+    <servlet-mapping>
+      <servlet-name>View</servlet-name>
+      <url-pattern>/view/*</url-pattern>
+    </servlet-mapping>
+    
 
 
 </web-app>
