--- a/resources/WEB-INF/web.xml
+++ b/resources/WEB-INF/web.xml
@@ -90,6 +90,24 @@
     </servlet-mapping>
 
 
+    <!-- Default Error Page Definitions -->
+    <error-page>
+        <exception-type>java.lang.Throwable</exception-type>
+        <location>/docs/error.html</location>
+    </error-page>
+    <error-page>
+        <error-code>500</error-code>
+        <location>/docs/error.html</location>
+    </error-page>
+    <error-page>
+        <error-code>404</error-code>
+        <location>/docs/error404.html</location>
+    </error-page>
+    <error-page>
+        <error-code>400</error-code>
+        <location>/docs/error400.html</location>
+    </error-page>
+
 
 </web-app>
 
