--- a/resources/WEB-INF/web.xml
+++ b/resources/WEB-INF/web.xml
@@ -92,20 +92,24 @@
 
     <!-- Default Error Page Definitions -->
     <error-page>
-        <exception-type>java.lang.Throwable</exception-type>
-        <location>/docs/error.html</location>
+        <error-code>400</error-code>
+        <location>/docs/error400.html</location>
     </error-page>
     <error-page>
-        <error-code>500</error-code>
-        <location>/docs/error.html</location>
+        <error-code>403</error-code>
+        <location>/docs/error403.html</location>
     </error-page>
     <error-page>
         <error-code>404</error-code>
         <location>/docs/error404.html</location>
     </error-page>
     <error-page>
-        <error-code>400</error-code>
-        <location>/docs/error400.html</location>
+        <error-code>500</error-code>
+        <location>error500.html</location>
+    </error-page>
+    <error-page>
+        <exception-type>java.lang.Throwable</exception-type>
+        <location>error500.html</location>
     </error-page>
 
 
