--- a/build.xml
+++ b/build.xml
@@ -44,9 +44,7 @@
     <property name="src.dir" location="src"/>
     <property name="doc.dir" location="doc"/>
     <property name="lib.dir" location="lib"/>
-    <property name="bin.dir" location="bin"/>
     <property name="resources.dir" location="resources"/>
-    <property name="datasets.dir" location="datasets"/>
     <property name="schema.dir" location="schema"/>
     <property name="buildfiles.dir" location="buildfiles"/>
     <property name="initialContent.dir"
@@ -69,6 +67,7 @@
 
 
     <!-- Libraries -->
+    <property name="junit.lib" value="junit-4.4.jar"/>
     <property name="jdom.lib" value="jdom-1.0.jar"/>
     <property name="servlet.lib" value="tomcat-5.5.0-servlet.jar"/>
     <property name="echo.lib" value="echosoap.jar"/>
@@ -97,6 +96,7 @@
         <fileset dir="${lib.dir}">
             <include name="${servlet.lib}"/>
             <include name="${jdom.lib}"/>
+            <include name="${junit.lib}"/>
             <include name="${cli.lib}"/>
             <include name="${thredds.lib}"/>
             <include name="${netcdf.lib}"/>
@@ -105,7 +105,7 @@
     </path>
 
 
-    <target name="all" depends="clean,clients,server,soap-lib"
+    <target name="all" depends="clean,clients,check,server,soap-lib"
             description="Builds lots of stuff."/>
 
 
@@ -128,6 +128,28 @@
         <tstamp/>
         <echo level="info" message="time: ${TSTAMP}"/>
     </target>
+
+
+
+    <target name="check"
+            description="Run Unit Tests"
+            depends="compile"
+            >
+
+        <junit  showoutput="yes"
+                haltonfailure="yes"
+                printsummary="yes"
+                >
+
+          <formatter type="plain" usefile="false"/>
+          <classpath refid="olfs.compile.classpath"/>
+
+          <test name="opendap.coreServlet.Scrub" />
+            
+        </junit>
+    </target>
+
+
 
 
     <target
@@ -302,7 +324,7 @@
 
     <target
             name="DISTRO"
-            depends="clean,src-dist,doc-dist,server-dist"
+            depends="clean,src-dist,doc-dist,server-dist,check"
             description="Builds complete distribution"
             >
 
