--- a/build.xml
+++ b/build.xml
@@ -80,6 +80,7 @@
     <property name="commons-cli.lib" value="apache-commons-cli-1.0.jar"/>
     <property name="commons-httpclient.lib" value="apache-commons-httpclient-3.1.jar"/>
     <property name="commons-logging.lib" value="apache-commons-logging-1.1.1.jar"/>
+    <property name="commons-codec.lib" value="apache-commons-codec-1.3.jar"/>
 
     <property name="xercesImpl.lib" value="xercesImpl-2.8.1.jar"/>
     <property name="xercesXmlApis.lib" value="xml-apis-2.8.1.jar"/>
@@ -105,6 +106,7 @@
             <include name="${commons-cli.lib}"/>
             <include name="${commons-httpclient.lib}"/>
             <include name="${commons-logging.lib}"/>
+            <include name="${commons-codec.lib}"/>
             <include name="${thredds.lib}"/>
             <include name="${netcdf.lib}"/>
             <include name="${nlog4j.lib}"/>
@@ -392,6 +394,7 @@
                 <include name="${commons-cli.lib}"/>
                 <include name="${commons-httpclient.lib}"/>
                 <include name="${commons-logging.lib}"/>
+                <include name="${commons-codec.lib}"/>
                 <include name="${xercesImpl.lib}"/>
                 <include name="${xercesXmlApis.lib}"/>
             </lib>
@@ -419,6 +422,7 @@
                 <include name="${commons-cli.lib}"/>
                 <include name="${commons-httpclient.lib}"/>
                 <include name="${commons-logging.lib}"/>
+                <include name="${commons-codec.lib}"/>
                 <include name="${xercesImpl.lib}"/>
                 <include name="${xercesXmlApis.lib}"/>
             </zipfileset>
@@ -476,6 +480,20 @@
                         rules="${rules.dir}/OlfsRulePack.xml"
                 />
     </target>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
     <target
