--- a/build.xml
+++ b/build.xml
@@ -24,7 +24,7 @@
 // You can contact OPeNDAP, Inc. at PO Box 112, Saunderstown, RI. 02874-0112.
 /////////////////////////////////////////////////////////////////////////////
 -->
-
+<!-- Subversion check in test -->
 
 <!DOCTYPE project [
         <!ENTITY globalprops      SYSTEM "./buildfiles/globalprops.xml">
