olfs: New subversion server test checkin

--- a/build.xml
+++ b/build.xml
@@ -25,6 +25,7 @@
 /////////////////////////////////////////////////////////////////////////////
 -->
 
+<!-- TEST CHECKIN -->
 
 <!DOCTYPE project [
         <!ENTITY globalprops      SYSTEM "./buildfiles/globalprops.xml">
