--- a/build.xml
+++ b/build.xml
@@ -193,10 +193,15 @@
     <property name="xercesImpl.lib" value="xercesImpl-2.8.1.jar"/>
     <property name="xercesXmlApis.lib" value="xml-apis-2.8.1.jar"/>
 
-    <property name="saxon-jdom.lib" value="saxon-6.5.5-jdom.jar"/>
-    <property name="saxon-xml-apis.lib" value="saxon-6.5.5-xml-apis.jar"/>
-    <property name="saxon.lib"    value="saxon-6.5.5.jar"/>
-
+    <property name="saxon-dom.lib"   value="saxon-9.1.0.5-dom.jar"/>
+    <property name="saxon-dom4j.lib" value="saxon-9.1.0.5-dom4j.jar"/>
+    <property name="saxon-jdom.lib"  value="saxon-9.1.0.5-jdom.jar"/>
+    <property name="saxon-s9api.lib" value="saxon-9.1.0.5-s9api.jar"/>
+    <property name="saxon-sql.lib"   value="saxon-9.1.0.5-sql.jar"/>
+    <property name="saxon-xom.lib"   value="saxon-9.1.0.5-xom.jar"/>
+    <property name="saxon-xpath.lib" value="saxon-9.1.0.5-xpath.jar"/>
+    <property name="saxon-xqj.lib"   value="saxon-9.1.0.5-xqj.jar"/>
+    <property name="saxon.lib"       value="saxon-9.1.0.5.jar"/>
 
 
 
@@ -222,6 +227,9 @@
             <include name="${thredds.lib}"/>
             <include name="${netcdf.lib}"/>
             <include name="${nlog4j.lib}"/>
+            <include name="${saxon-jdom.lib}"/>
+            <include name="${saxon-s9api.lib}"/>
+            <include name="${saxon.lib}"/>
         </fileset>
     </path>
 
@@ -583,11 +591,9 @@
                 <include name="${commons-codec.lib}"/>
                 <include name="${xercesImpl.lib}"/>
                 <include name="${xercesXmlApis.lib}"/>
-                <!--
                 <include name="${saxon-jdom.lib}"/>
-                <include name="${saxon-xml-apis.lib}"/>
+                <include name="${saxon-s9api.lib}"/>
                 <include name="${saxon.lib}"/>
-                -->
 
             </lib>
             <classes dir="${build.classes}"/>
@@ -616,11 +622,9 @@
                 <include name="${commons-codec.lib}"/>
                 <include name="${xercesImpl.lib}"/>
                 <include name="${xercesXmlApis.lib}"/>
-                <!--
                 <include name="${saxon-jdom.lib}"/>
-                <include name="${saxon-xml-apis.lib}"/>
+                <include name="${saxon-s9api.lib}"/>
                 <include name="${saxon.lib}"/>
-                -->
             </zipfileset>
 
             <zipfileset dir="${initialContent.dir}" prefix="initialContent">
