--- a/resources/WEB-INF/web.xml
+++ b/resources/WEB-INF/web.xml
@@ -121,14 +121,18 @@
         <location>/docs/error500.html</location>
     </error-page>
     <error-page>
+        <error-code>501</error-code>
+        <location>/docs/error501.html</location>
+    </error-page>
+    <error-page>
         <exception-type>java.lang.Throwable</exception-type>
         <location>/docs/error500.html</location>
     </error-page>
-    
+
     <session-config>
-        <session-timeout>20</session-timeout> 
+        <session-timeout>20</session-timeout>
     </session-config>
-    
+
 
 
 </web-app>
